# nu-cron

./: .env.test  .eslintrc.js  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ai-deployment-monitor.yml  ai-pipeline.yml  ai-pr-validation.yml  ai-quality-gates.yml
application/config/: ai_config.yaml
application/frontend/: package.json
application/src/: main.py
application/src/core/: ai_assistant.py  config.py
application/src/interfaces/: rest_api.py
application/src/migrations/: env.py
application/src/models/: database.py
application/src/services/: auth_service.py
application/src/services/ai/: model_selector.py
application/src/services/code_generation/: __init__.py  code_generator.py  routes.py
application/src/services/deployment/: validation.py
application/src/services/environment/: environment_manager.py  routes.py
application/tests/utils/: model_test_utils.py
devin/: README.md
devin/documentation/: AI-SDLC-Completion-Checklist.md  AI-SDLC-Completion-Review-Roadmap-Planning.md  AI-SDLC-Cost-Optimization.md  AI-SDLC-Deployment-Automation-Strategy.md  AI-SDLC-Deployment-Strategy.md  AI-SDLC-Feedback-Iteration.md  AI-SDLC-Implementation-Completion-Checklist.md  AI-SDLC-Performance-Review-Long-Term-Strategy.md  AI-SDLC-Performance-Review.md  AI-SDLC-Roadmap-Planning-Future-Enhancements.md  AI-SDLC-Roadmap.md  Continuou-Feedback-Iteration-Devin.AI-Output-Refinement-Task-Review.md  HUMAN-DEVELOPMENT-GUIDE.md  Optimizing-Devin.AI-Cost-Efficiency-Performance-Scaling.md  README.md  SDLC.md  TASKS.md
devin/knowledge/: AI-Architecture-Summary.md  AI-Best-Practices.md  AI-Documentation-Guidelines.md  AI-Environment-Setup.md  AI-Integration-Points.md  AI-Knowledge-And-Playbook-Improvement-Analysis.md  AI-Knowledge-Base.md  AI-Knowledge-Enhancement-Suggestions.md  AI-Knowledge-Improvement-Analysis.md  AI-Knowledge-Suggestions-Summary.md  AI-Model-Integration-Specification.md  AI-Model-OpenAI-Strategy.md  AI-PR-Management.md  AI-Requirement-Analysis.md  AI-System-Security-And-Scalability.md  AI-Task-Execution-Pipeline.md  AI-Task-Learning-Model.md  Define-Knowledge-Base-Devin.AI-Task-Execution.md  Expanding-Devin.AI-Knowledge-Base-Continuous-Documentation-Maintenance.md  SetUp-Devin.ai-Knowledge-Base.md  Vector-Store-Implementation.md
devin/logs/: AI-Next-Tasks.md  AI-Task-History.md  PR_Review_2.md  PR_Review_3.md  PR_Review_4.md  PR_Review_5.md
devin/playbooks/: AI-SDLC-Playbook.md  AI-Task-Execution-Playbook.md  Create-Playbooks-Devin.AI-Task-Execution-Consistency.md
devin/scripts/: environment_manager.py
devin/slack-integration/: AI-Slack-Channel-Setup.md  Optimise-Devin.AI-Task-Execution-Slack-Task-Assignments.md
devin/workflows/: AI-Documentation-Workflow.md  AI-GitHub-PR-Management.md  AI-Project-Startup-Workflow.md  AI-Slack-Integration-Guide.md  AI-Task-Assignment-Commands.md
docs/: AI-Driven-Software-Development-Lifecycle_AI-SDLC_Features-Functionality.md  Software-Requirements-Specification-SRS.md  Technical-Architecture-Document-TAD.md  ai_memory.md  ai_model_selection.md  ai_sdlc_automation.md  ai_sdlc_best_practices.md  ai_sdlc_bias_mitigation.md  ai_sdlc_compliance_auditing.md  ai_sdlc_continuous_improvement.md  ai_sdlc_data_privacy.md  ai_sdlc_documentation_standard.md  ai_sdlc_governance.md  ai_sdlc_guidelines.md  ai_sdlc_incident_response.md  ai_sdlc_knowledge_management.md  ai_sdlc_monitoring.md  ai_sdlc_project_management.md  ai_sdlc_risk_management.md  ai_sdlc_scalability.md  ai_sdlc_versioning.md  api_docs.md  architecture.md  code_review.md  cost_optimization.md  deployment_guide.md  documentation_overview.md  environments.md  future_expansions.md  integration_testing.md  post_deployment_evaluation.md  roadmap.md  security.md  testing_strategy.md  user_training.md  workflow.md
kubernetes/deployment/: strategies.yaml  validation.py
kubernetes/monitoring/elasticsearch/: elasticsearch.yaml
kubernetes/monitoring/grafana/: config.yaml  deployment.yaml
kubernetes/monitoring/kibana/: kibana.yaml
kubernetes/monitoring/logstash/: log-rotation.yaml  logstash.yaml
kubernetes/monitoring/prometheus/: alerting-rules.yaml  operator.yaml  prometheus-instance.yaml  service-monitor.yaml
kubernetes/security/: auth-middleware.yaml  namespace-rbac.yaml  network-policies.yaml  role-hierarchy.yaml
kubernetes/security/certificates/: cert-manager.yaml  tls-ingress.yaml
kubernetes/security/service-mesh/: ai-services-mesh.yaml  linkerd.yaml
tests/performance/: locustfile.py
(+11 files in other folders)
